@@ -163,6 +163,7 @@ schemeParser    = None
 
 
 [peak.naming.schemes]
+
 # This section defines naming context factories or URL.Base subclasses to
 # be used for various URL schemes.  The entry name is the URL scheme, and
 # the value is either the object or an import string for loading it.
@@ -200,6 +201,8 @@ file    = "peak.naming.factories.openable:FileURL"
 pkgfile = "peak.naming.factories.openable:PkgFileURL"
 icb     = "peak.net.icb:ICB_URL"
 
+
+
 tcp     = "peak.net.sockets.tcpudpURL"
 udp     = "peak.net.sockets.tcpudpURL"
 unix    = "peak.net.sockets.unixURL"
@@ -207,6 +210,7 @@ unix.dg = "peak.net.sockets.unixURL"
 
 zconfig.schema = "peak.config.load_zconfig:ZConfigSchemaContext"
 shellcmd = "peak.naming.factories.shellcmd:ShellCommandCtx"
+
 
 # Data type conversion for database drivers
 
@@ -227,15 +231,6 @@ shellcmd = "peak.naming.factories.shellcmd:ShellCommandCtx"
 
 [DCOracle2.sql_types]
 * = config.Namespace('peak.sql_types')
-
-
-
-
-
-
-
-
-
 
 
 
